refactor(pathfinder): add Object safety